--- a/01.基本操作.md
+++ b/01.基本操作.md
@@ -45,3 +45,12 @@ new : c1->c4->c5``
 3. git rebase -i HEAD~2 //再在弹出窗口中删除c4即可
 
 
+### cherry-pick 把蓝色图片里面的分支处理成红色图片里面的样子
+
+
+![image](./image/Snipaste_2022-08-16_10-21-54.png)
+
+![image](https://user-images.githubusercontent.com/78588975/184784625-ea9bb211-dca9-4ad4-9f0a-0e4b2b9eecef.png)
+
+由蓝图可知,当前Head处于master分支上面 , 要变成红图那样在master分支上面获取到另外三个分支上面的一些节点功能,这个时候cherry-pick就可以非常方便的处理这个需求
+1. git cherry-pick c3 c4 c7  只用这一句就可以实现红图
