push.default=upstream

--- a/git/05.push.default.md
+++ b/git/05.push.default.md
@@ -1,1 +1,12 @@
 ### push出错的情况
+
+#### push.default 有三种值：（upstream，current，simple） 默认的是simple
++ <span style="color:lightblue;font-size:20px;">simple:</span>
+  推送本地分支dev的时候：如果在远程仓库中找不到对应的dev分支就会`报错`
+
+
++ <span style="color:lightblue;font-size:20px;">current:</span>
+  推送本地分支dev的时候：如果在远程仓库中找不到对应的dev分支就会在远程自动创建一个dev分支
+
++ <span style="color:lightblue;font-size:20px;">upstream:</span>
+  找到上游分支
